# musicnn

./: .gitignore  pyproject.toml
musicnn/: configuration.py  extractor.py  models.py  tagger.py
tests/: create_regression_data.py  regression_test.py
