[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm[toml]>=8", "wheel"]

[project]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    'Topic :: Multimedia :: Sound/Audio :: Analysis',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'librosa',
    'tensorflow-cpu',
    'numpy'
]
description = 'Pronounced as "musician", musicnn is a set of pre-trained deep convolutional neural networks for music audio tagging'
dynamic = ["version"]
name = 'musicnn'

[project.urls]
documentation = 'http://github.com/jordipons/musicnn'
source = 'http://github.com/jordipons/musicnn'
tracker = 'http://github.com/jordipons/musicnn/issues'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['musicnn*']
